
SUBDIRS = buildlib intl apt-pkg methods cmdline tools doc m4 po

ACLOCAL_AMFLAGS = -I m4 -I buildlib

EXTRA_DIST = \
		AUTHORS.RPM \
		COPYING.GPL \
		rpmpriorities \
		test/conf.cc \
		test/extract-control.cc \
		test/hash.cc \
		test/makefile \
		test/mthdcat.cc \
		test/rpmver.cc \
		test/scratch.cc \
		test/testdeb.cc \
		test/testextract.cc \
		test/uri.cc \
		test/versions.lst \
		test/versiontest.cc
		python/apt.i \
		python/apt.py \
		python/apt_wrap.cxx \
		python/Makefile \
		python/swig-1.3.16-cxx.patch
